# cpp_base

./: CMakeLists.txt  PhoneBook.txt  README.md  SBomberProject.cpp  black_jack_new.cpp  conanfile.txt  log.txt  table.html  task_1.cpp  task_7.cpp
include/: Bomb.h  DynamicObject.h  GameObject.h  House.h  LevelGUI.h  Logging.h  MyTools.h  Plane.h  SBomber.h  SBomberImpl.h  Tank.h
src/: AnimateScrolling.cpp  Bomb.cpp  DynamicObject.cpp  Ground.cpp  House.cpp  LevelGUI.cpp  Logging.cpp  MyTools.cpp  Plane.cpp  SBomber.cpp  SBomberImpl.cpp  Tank.cpp
